# embedded-systems

./: .gitignore  CMakeLists.txt  LICENSE  README.md
00-exam-prep/: CMakeLists.txt
00-exam-prep/01-einfuehrung/: CMakeLists.txt
00-exam-prep/02-dig-io/: CMakeLists.txt
00-exam-prep/03-interrupts/: CMakeLists.txt
00-exam-prep/05-pwm/: CMakeLists.txt
00-exam-prep/06-analog-io/: CMakeLists.txt
00-exam-prep/07-watchdog/: CMakeLists.txt
00-exam-prep/08-uart-spi/: CMakeLists.txt
01-einfuehrung/: CMakeLists.txt
01-einfuehrung/01-toggle_led/: .gitignore  CMakeLists.txt  toggle_led.ino
01-einfuehrung/02-serial/: .gitignore  CMakeLists.txt  serial_com.cpp  serial_com.ino
02-digio/: CMakeLists.txt
02-digio/01-toggle_led/: .gitignore
02-digio/01-toggle_led_fancy/: .gitignore  CMakeLists.txt  toggle_led_fancy.ino
02-digio/02-counter/: .gitignore  CMakeLists.txt  counter.ino
03-interrupts/: CMakeLists.txt
03-interrupts/01-int-lib-avr/: CMakeLists.txt  int-lib-avr.ino
03-interrupts/02-int-reg/: CMakeLists.txt  int-reg.ino
03-interrupts/03-int-nested/: CMakeLists.txt  int-nested.cpp  int-nested.ino
04-timer/: CMakeLists.txt
04-timer/01-prescaler/: CMakeLists.txt  prescaler.cpp
04-timer/02-no-prescaler/: CMakeLists.txt  no-prescaler.cpp
04-timer/03-compare/: CMakeLists.txt  compare.cpp
05-pwm/01-servo-avr/: CMakeLists.txt  servo-avr.cpp
05-pwm/02-servo-reg/: CMakeLists.txt  servo-reg.cpp
06-analog-io/01-analog-ard-lib/: CMakeLists.txt  (+1 more)
07-watchdog/: CMakeLists.txt
09-lcd/: CMakeLists.txt
11-state-machine/: CMakeLists.txt
(+54 files in other folders)
